# asset-allocation

./: .gitignore  README.md  allocation.py  asset_allocation.py  assets.sample.json  common.py  logger.py  oskar.py  portfolio.py  position.py  pyproject.toml  utils.py
asset_price/: __init__.py  factory.py  justetf_position.py  make_position.py  position.py  yfinance_position.py
portfolio/: deallocatable.py  non_regional_portfolio.py  portfolio.py  regional_portfolio.py
position/: __init__.py  factory.py  justetf_position.py  oskar_position.py  position.py  yfinance_position.py
tests/: conftest.py  test_oskar_login.py  test_oskar_parsing.py  test_oskar_portfolio_update.py  test_utils.py
visual/: __init__.py  pie_chart.py  visual.py
