[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation"
version = "0.3.1"
description = "Personal asset allocation and position pricing"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "yfinance",
]

[tool.setuptools]
py-modules = ["allocation"]
packages = ["position", "visual", "portfolio"]
