[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-allocation"
version = "0.5.0"
description = "Personal asset allocation and position pricing"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "playwright>=1.40",
    "yfinance",
]

[project.scripts]
asalloc = "allocation:cli"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.setuptools]
py-modules = ["allocation", "utils", "oskar"]
packages = ["position", "visual", "portfolio"]
